--- a/HumdifierApp/app/build.gradle
+++ b/HumdifierApp/app/build.gradle
@@ -25,6 +25,7 @@ repositories {
 
 dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'ca.antonious:materialdaypicker:0.6.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
