--- a/HumdifierApp/app/build.gradle
+++ b/HumdifierApp/app/build.gradle
@@ -29,5 +29,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'android.arch.navigation:navigation-ui:1.0.0'
+    implementation 'com.code-troopers.betterpickers:library:3.1.0'
+
 
 }
