Made a Bound Service

--- a/HumdifierApp/app/src/main/AndroidManifest.xml
+++ b/HumdifierApp/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <service android:name=".Humidifier" />
         <activity android:name=".UserScheduleActivity"></activity>
         <activity android:name=".ChartActivity" />
         <activity android:name=".MainActivity2" />
