--- a/HumdifierApp/app/src/main/AndroidManifest.xml
+++ b/HumdifierApp/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+
+        >
         <service android:name=".Humidifier" />
         <activity android:name=".UserScheduleActivity"></activity>
         <activity android:name=".ChartActivity" />
