--- a/HumdifierApp/app/src/main/AndroidManifest.xml
+++ b/HumdifierApp/app/src/main/AndroidManifest.xml
@@ -11,16 +11,26 @@
         android:theme="@style/AppTheme"
 
         >
-        <service android:name=".Humidifier" />
-        <activity android:name=".UserScheduleActivity"></activity>
-        <activity android:name=".ChartActivity" />
-        <activity android:name=".MainActivity2" />
-        <activity android:name=".MainActivity">
+        <service android:name=".Humidifier"
+            />
+        <activity android:name=".UserScheduleActivity">
+            android:screenOrientation="portrait"
+        </activity>
+        <activity android:name=".ChartActivity"
+            android:screenOrientation="portrait"/>
+
+
+
+        <activity android:name=".MainActivity2"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
