--- a/HumdifierApp/app/src/main/AndroidManifest.xml
+++ b/HumdifierApp/app/src/main/AndroidManifest.xml
@@ -9,13 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-
         >
+
         <service android:name=".Humidifier"
             />
-        <activity android:name=".UserScheduleActivity">
+        <activity android:name=".UserScheduleActivity"
             android:screenOrientation="portrait"
-        </activity>
+            />
+
+
         <activity android:name=".ChartActivity"
             android:screenOrientation="portrait"/>
 
