--- a/HumdifierApp/app/build.gradle
+++ b/HumdifierApp/app/build.gradle
@@ -24,10 +24,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'ca.antonious:materialdaypicker:0.6.0'
-    implementation 'com.jjoe64:graphview:4.2.2'
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
+    //implementation "com.android.support:support-compat:28.0.0"
     implementation 'com.github.nkzawa:socket.io-client:0.6.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
